manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-delete-task-svc
spec:
  type: ClusterIP
  selector:
    app: todo-delete-task
  ports:
  - port: 80
    targetPort: 8000
